[tool.poetry]
name = "repl_nix_BarkyClone"
version = "0.1.0"
description = ""
authors = ["JoshTarrant <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
python-dotenv = "^0.19.2"
SQLAlchemy = "^1.4.31"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
